--- a/content/ap-spanish-d815eb2f-7405-4452-a049-048a75be801b-nav.html
+++ b/content/ap-spanish-d815eb2f-7405-4452-a049-048a75be801b-nav.html
@@ -22,6 +22,9 @@
 <nav>
 <ol>
 <li>
+<a href="a-note-about-copyright-2689bfd8-197e-4109-b299-ed6e11ea5cce.html">A Note about Copyright</a>
+</li>
+<li>
 <span>Capítulo 1: Introduction to the Exam</span>
 <ol>
 <li>
