--- a/content/ap-spanish-d815eb2f-7405-4452-a049-048a75be801b-nav.html
+++ b/content/ap-spanish-d815eb2f-7405-4452-a049-048a75be801b-nav.html
@@ -22,6 +22,9 @@
 <nav>
 <ol>
 <li>
+<a href="12-the-exam-f32a5dcf-386f-4150-83b0-3c13653e090d.html">1.2 The Exam</a>
+</li>
+<li>
 <span>Capítulo 1: Introduction to the Exam</span>
 <ol>
 <li>
